# activity-report

./: .gitignore  AGENTS.md  README.md  install.sh  pyproject.toml
src/activity_report/: __init__.py  analysis.py  cli.py  config.py  models.py  sources.py
tests/: test_activity_report.py
