[project]
name = "activity-report"
version = "0.1.0"
description = "Estimate work activity from git, local AI logs, and Slack"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "tomli>=2.0.1; python_version < '3.11'",
]

[project.scripts]
activity-report = "activity_report.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["/src"]

[tool.hatch.build.targets.wheel]
packages = ["src/activity_report"]
sources = ["src"]
